# dbt-intro

./: .gitignore  dbt_project.yml  profiles.yml  pyproject.toml
models/: sources.yml
models/enriched/: customer_orders_with_payments.sql  models.yml  orders_with_payments.sql
models/staging/: models.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
