[tool.poetry]
name = "dbt-intro"
version = "0.1.0"
description = ""
authors = ["Steph Samson <steph.samson@contiamo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.2"
dbt-snowflake = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
