[tool.poetry]
name = "dbt-intro"
version = "0.1.0"
description = "A repo demonstrating a very simple dbt project with Snowflake"
authors = ["Contiamo <info@contiamo.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.2"
dbt-snowflake = "^1.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
